# ass1

./: AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
